2000-08-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): More small steps...

2000-08-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Another small step...

	* configure.in: 99k5

	* include/ntp_request.h: Make data[] member of req_pkt 32 again.
	Bump the version number...

	* ntpd/ntp_loopfilter.c (local_clock): Change 0. to 0 in a couple
	of places.
	From Dave Mills

2000-08-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c (main): Minimal progress...

2000-08-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/check_y2k.c: Make debug definition match ntpd.h's declaration

	* ntpd/Makefile.am (check-local): Use test in favor of [

2000-08-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (NTP_KEYSDIR): Typo

2000-08-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ElectricFence/Makefile.am (check-local): use test instead of [

	* configure.in: AC_REPLACE_FUNCS(strdup)
	* libntp/strdup.c (strdup): Added.
	* libntp/Makefile.am (EXTRA_libntp_a_SOURCES): Added strdup.c

	* util/Makefile.am (ntp_genkeys_DEPENDENCIES): Use $U on .o files
	(ntp_genkeys_LDADD): ditto.

	* ntpd/ntp_crypto.c: Use NTP_KEYSDIR 

	* util/ntp-genkeys.c (snifflink): Ignore ENOENT, too.

	* ntpd/ntp_proto.c (peer_xmit): Crypto cleanup
	* ntpd/ntp_crypto.c: Cleanup
	* ntpd/ntp_control.c: Join the club
	* ntpd/ntp_config.c: Call crypto_config() instead; we got rid of
	crypto_flags.
	* include/ntp_crypto.h (CRYPTO_FLAG_ENAB): New crypto flags, rework
	* include/ntp_control.h (CS_FLAGS): Wiggle in.
	* include/ntp.h: Added crypto peer status to struct peer
	From Dave Mills

2000-08-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c: Initialize path_keysdir to NTP_KEYSDIR.

	* configure.in (NTP_KEYSDIR): Added
	* acinclude.m4: Added AC_DEFINE_DIR macro

	* util/ntp-genkeys.c (main): Sanity checks on the file paths.

2000-08-02  Harlan Stenn  <stenn@whimsy.udel.edu>
